4 added: German files with UTF-8  (sato-san)
5 Bugfix: for fast-reply in IE (McDonald)
6 Bugfix: for newbb_rtl.css
7 Bugfix: date&time.
8 added: the module create the upload-folders automatically (sato-san)
9 added: Spanish files with UTF-8  (juancj)
10 added: Portuguesebr files with UTF-8  (Gibaphp)
11 added: French files with UTF-8  (FaYsSaL)
12 added: Russian files with UTF-8  (algalochkin)

Changelog 1.0 RC
Nov 6th, 2008 
=============
1 Bugfix for user signatures in ICMS 1.1
2 Added Built in RTL support
3 Removed need to have frameworks
4 Implemented (partly, it is not finished yet) easy-renaming
5 Changed PDF generator to TCPDF for UTF-8 languages
6 Added xoops-magazine image set as default
7 New icons (thanks McDonald And http://dryicons.com/)

==========================================================

CBB

XOOPS Community Bulletin Board

Changelog 3.08
Jan 3rd, 2007 
=============
1 Bugfix for user stats (jorff, agl)
2 Bugfix for reading new posts


Changelog 3.07
October 29th, 2006 
=============
1 Bugfix for permission template (js related)
2 Added support for FCKeditor upload
3 Added support for extended xcode which allows flash/wmplayer/...
4 Fix for XSS reported by bubuche93


Changelog 3.06
October 8th, 2006 
=============
Bugfix version


Changelog 3.05
July 22nd, 2006 
=============
1 Bugfix for notifying new replies for a specific topic
2 Bugfix for permission check when moving a post
3 Removed inherition of view mode and post order from system-wide preference
4 Added editor parameter control based on plugin'ed configs
5 Bugfix for xhtml compliance in forum selection box (reported by skalpa)
6 Bugfix for update scripts for newbb 2.2
7 Bugfix for category name display in permission admin
8 Bugfix for view_level check in viewforum template (reported by topmuzik.com)

Changelog 3.04 Final
June 3rd, 2006 
=============
1 MySQL syntax for data synchronization for different versions
2 xhtml fixes