@@ -504,6 +504,6 @@ class User_language extends User
 define('_PDF_SUBJECT','عنوان'); 
 define('_PDF_TOPIC','مبحث'); 
 define('_PDF_DATE','تاریخ'); 
-define('_MD_UP','Top');
-define('_MD_POSTTIME','Date');
+define('_MD_UP',_MD_TOP);
+define('_MD_POSTTIME',_PDF_DATE);
 ?>
